--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         compose_version = '1.1.1'
         dagger_version = '2.41'
+        retrofit_version = '2.9.0'
+        moshi_version = '1.13.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
