--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.navigation:navigation-compose:2.4.1"
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.0.0-rc02"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
